--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
   <h1>Happy Birthday Disha 🎂🎉</h1>
-  <img src="Disha2.jpg" alt="Disha">
+  <img src="Memories/Disha2.jpg" alt="Disha">
 
   <div>
     <button onclick="flyBalloons()">Fly the Balloons 🎈</button>
@@ -156,17 +156,17 @@
 
   <!-- Memories -->
   <div id="memories">
-    <img src="memories/pic-1.jpg" alt="Memory 1">
-    <img src="memories/pic-2.jpg" alt="Memory 2">
-    <img src="memories/pic-3.jpg" alt="Memory 3">
-    <img src="memories/pic-4.jpg" alt="Memory 4">
-    <img src="memories/pic-5.jpg" alt="Memory 5">
-    <img src="memories/pic-6.jpg" alt="Memory 6">
-    <img src="memories/pic-7.jpg" alt="Memory 7">
-    <img src="memories/pic-8.jpg" alt="Memory 8">
-    <img src="memories/pic-9.jpg" alt="Memory 9">
-    <img src="memories/pic-10.jpg" alt="Memory 10">
-    <img src="memories/pic-11.jpg" alt="Memory 11">
+    <img src="Memories/pic-1.jpg" alt="Memory 1">
+    <img src="Memories/pic-2.jpg" alt="Memory 2">
+    <img src="Memories/pic-3.jpg" alt="Memory 3">
+    <img src="Memories/pic-4.jpg" alt="Memory 4">
+    <img src="Memories/pic-5.jpg" alt="Memory 5">
+    <img src="Memories/pic-6.jpg" alt="Memory 6">
+    <img src="Memories/pic-7.jpg" alt="Memory 7">
+    <img src="Memories/pic-8.jpg" alt="Memory 8">
+    <img src="Memories/pic-9.jpg" alt="Memory 9">
+    <img src="Memories/pic-10.jpg" alt="Memory 10">
+    <img src="Memories/pic-11.jpg" alt="Memory 11">
 
     <!-- Add more up to 15 -->
   </div>
