--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
   <h1>Happy Birthday Disha 🎂🎉</h1>
-  <img src="Memories/Disha2.jpg" alt="Disha">
+  <img src="Memories/Disha2.png" alt="Disha">
 
   <div>
     <button onclick="flyBalloons()">Fly the Balloons 🎈</button>
